# trueno-graph

./: .certeza.yml  .clippy.toml  .gitignore  .pmat-gates.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GPU_BFS_STATUS.md  IMPLEMENTATION_STATUS.md  MVP_COMPLETE.md  MVP_SUMMARY.md  Makefile  PHASE2_COMPLETE.md  PHASE3_PROGRESS.md  README.md  SPEC_UPDATE_SUMMARY.md  book.toml  justfile  roadmap.yaml
.cargo/: config.toml
.github/workflows/: ci.yml  deploy-docs.yml  nightly-bench.yml  quality.yml  stress.yml
.pmat/: baseline.json  context.db  project.toml
.pmat/metrics/: dependencies.json
benches/: gpu_algorithms.rs  graph_algorithms.rs  phase4_algorithms.rs
benchmarks/: README.md  compare_networkx.py  networkx_comparison_results.json  requirements.txt
book/src/: SUMMARY.md  introduction.md
book/src/appendix/: academic-references.md  faq.md
book/src/architecture/: csr-format.md
book/src/examples/: overview.md
book/src/getting-started/: basic-concepts.md  installation.md  quick-start.md
book/src/gpu/: memory-paging.md
docs/roadmaps/: roadmap.yaml
docs/specifications/: graph-db-spec.md
examples/: README.md  comprehensive_demo.rs  graph_algorithms.rs  paging_demo.rs  simple_graph.rs
src/: generated_contracts.rs  lib.rs  verification_specs.rs
src/algorithms/: louvain.rs  mod.rs  pagerank.rs  pattern.rs  shortest_path.rs  structure.rs  topo.rs  traversal.rs
src/gpu/: bfs.rs  buffer.rs  cache.rs  device.rs  memory.rs  mod.rs  paged_bfs.rs  pagerank.rs  paging.rs
src/gpu/shaders/: bfs.wgsl  bfs_simple.wgsl  pagerank.wgsl
src/storage/: csr.rs  mod.rs  parquet.rs
tests/: backend_story.rs  integration_tests.rs  property_tests.proptest-regressions  property_tests.rs
